syntax = "proto3";

option go_package = "jekabot/proto";

service ImagesService {
	rpc GetRandomTaksa(GetRandomTaksaRequest) returns(GetRandomTaksaResponse);
};

message GetRandomTaksaRequest {};

message GetRandomTaksaResponse {
	bytes bin = 1;
	string id = 2;
	string caption = 3;
};
